# stage-cheater

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  install.sh  pyproject.toml  start.sh
examples/: config.toml  setlist.txt
examples/songs/: amazing_grace.chopro  house_of_the_rising_sun.chopro
image-build/: README.md  build-image.sh
src/stage_cheater/: __init__.py  chordpro.py  config.py  display.py  input_handler.py  main.py  playlist.py  system_control.py  usb_mount.py
tests/: __init__.py  test_chordpro.py  test_config.py  test_playlist.py
